--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -246,6 +246,18 @@ input[type="submit"]{
 }
 
 
+.social-icon{
+    display: inline-block;
+    padding: 5px;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.fa{
+    color: #fff;
+    font-size: 2em;
+}
+
 #footer-margin {
     background-color: #2a2c50;
     height: 3vh;
