--- a/Zadania-domowe/Zadanie-4-RWD/css/responsive.css
+++ b/Zadania-domowe/Zadanie-4-RWD/css/responsive.css
@@ -1,4 +1,4 @@
-/* Global settings */
+/* Default settings - greater than 1170px */
 @media screen {
     #background {
         background-image: url('../img/man-1.jpg');
