--- a/Zadania-domowe/Zadanie-5_Product_List/css/style.css
+++ b/Zadania-domowe/Zadanie-5_Product_List/css/style.css
@@ -22,17 +22,14 @@ body{
     position: relative;
     width: 24%;
     height: 100%;
-    margin-left: 1%;
     display: inline-block;
-    
+    margin-right: .5%;
+    margin-bottom: 5px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 
-.first-container{
-    margin-left: 0;
-}
 
 .bottom {
     position: relative;
