--- a/Zadania-domowe/Zadanie-5_Product_List/css/style.css
+++ b/Zadania-domowe/Zadanie-5_Product_List/css/style.css
@@ -35,7 +35,7 @@ body{
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: #eb9903;
+    background-color: rgba(255, 128, 0, 0.6);
     opacity: 0;
     
     transition-duration: 0.5s;
@@ -73,10 +73,6 @@ body{
 
 /* Transition effects */
 .bottom:hover{
-    opacity: 0.7;
-}
-
-.bottom:hover .fa {
     opacity: 1;
 }
 
